# tulen-script

./: README.md  crafty-script.cabal  stack.yaml  tulen-script.cabal
examples/01/: stack.yaml
examples/01/api/: api.cabal  plugin.yaml
examples/01/api/src/: API.hs
examples/01/api/src/API/: Input.hs  Prelude.hs  Sub1.hs  Sub2.hs
examples/01/core/: core.cabal
examples/01/core/src/: Main.hs
examples/01/plugin/: plugin.cabal  plugin.yaml
examples/01/plugin/src/: Plugin.hs
examples/01/plugin/src/Plugin/: Func1.hs  Func2.hs
src/Game/Crafty/: Script.hs
src/Game/Crafty/Script/: Package.hs
src/Game/Tulen/: Script.hs
src/Game/Tulen/Script/: Package.hs
test/Game/Tulen/Script/: PackageSpec.hs
