name:                crafty-script
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ncrashed/crafty-script#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Game.Crafty.Script
    Game.Crafty.Script.Package
  build-depends:
      base          >= 4.7    && < 5
    , aeson         >= 1.0    && < 1.3
    , containers    >= 0.5    && < 0.6
    , directory     >= 1.3    && < 1.4
    , exceptions    >= 0.8    && < 0.9
    , extra         >= 1.5    && < 1.6
    , filepath      >= 1.4    && < 1.5
    , hint          >= 0.6    && < 0.7
    , mtl           >= 2.2    && < 2.3
    , text          >= 1.2    && < 1.3
    , yaml          >= 0.8    && < 0.9

  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    DeriveDataTypeable
    DeriveGeneric
    GeneralizedNewtypeDeriving
    KindSignatures
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving

test-suite crafty-script-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , crafty-script
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ncrashed/crafty-script
