name:           core
version:        0.1.0.0
cabal-version:  >= 1.10
build-type:     Simple

executable crafty-example01
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:
      base          >= 4.7    && < 5
    , api
    , crafty-script
  default-extensions:
    RecordWildCards
